test/official_tests/operator/add_string_nil.lox
"s" + nil; // error: {"line":1,"message":"Operator '+': incompatible types 'string' and 'nil'","type":"RuntimeError"}
